Added all routing for snowboards and added all working links to main snowboard view

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -85,7 +85,7 @@
 		<div id="portfolio-wrap">
 			<div id="portfolio" data-col="3">
 				<div class="item1" style="background-color:#eee;">
-					<a href="snowboards/proto-typetwo.html">
+					<a [routerLink]="['snowboards/board/proto-type-two']">
 						<div class="item-content" style="background-image:url('../../assets/products/snowboards/proto/NS_ProtoT217_1-Action=thumbnail&amp;Width=715&amp;Height=570&amp;algorithm=fill_proportional.jpg')"></div>
 						<div class="item-overlay">
 							<span class="item-title">Proto Type Two</span>
@@ -94,7 +94,7 @@
 					</a>
 				</div>
 				<div class="item2" style="background-color:#eee;">
-					<a href="snowboards/twentyfive.html">
+					<a [routerLink]="['snowboards/board/twenty-five']">
 						<div class="item-content" style="background-image:url('../../assets/products/snowboards/Cobra/NS_TwentyFive17_1-Action=thumbnail&amp;Width=715&amp;Height=570&amp;algorithm=fill_proportional.jpg')"></div>
 						<div class="item-overlay">
 							<span class="item-title">Twenty Five</span>
@@ -103,7 +103,7 @@
 					</a>
 				</div>
 				<div class="item3" style="background-color:#eee;">
-					<a href="snowboards/warlock.html">
+					<a [routerLink]="['snowboards/board/warlock']">
 						<div class="item-content" style="background-image:url('../../assets/products/snowboards/Evo/NS_Warlock17_1-Action=thumbnail&amp;Width=715&amp;Height=570&amp;algorithm=fill_proportional.jpg')"></div>
 						<div class="item-overlay">
 							<span class="item-title">Warlock</span>
