--- a/src/app/snowboards/snowboards.component.html
+++ b/src/app/snowboards/snowboards.component.html
@@ -17,7 +17,7 @@
 		<div id="portfolio-wrap" class="no-gutter">
 			<div id="portfolio" data-col="6">
 				<div class="item1">
-					<a href="proto-typetwo.html">
+					<a [routerLink]="['/snowboards/board/proto-type-two']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/proto/17ProtoT2.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Proto Type Two</span>
@@ -26,7 +26,7 @@
 					</a>
 				</div>
 				<div class="item2">
-					<a href="wsprototypetwo.html">
+					<a [routerLink]="['/snowboards/board/proto-type-two-womens']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/raven/17WomensProto.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Women's Proto Type Two</span>
@@ -35,7 +35,7 @@
 					</a>
 				</div>
 				<div class="item3">
-					<a href="twentyfive.html">
+					<a [routerLink]="['/snowboards/board/twenty-five']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Cobra/1725.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Twenty Five</span>
@@ -44,7 +44,7 @@
 					</a>
 				</div>
 				<div class="item4">
-					<a href="warlock.html">
+					<a [routerLink]="['/snowboards/board/warlock']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Evo/17Warlock.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Warlock</span>
@@ -53,7 +53,7 @@
 					</a>
 				</div>
 				<div class="item5">
-					<a href="funslinger.html">
+					<a [routerLink]="['/snowboards/board/funslinger']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/funslinger/17Funslinger.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Funslinger</span>
@@ -62,7 +62,7 @@
 					</a>
 				</div>
 				<div class="item6">
-					<a href="west.html">
+					<a [routerLink]="['/snowboards/board/west']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/heritage/17West2.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">West</span>
@@ -71,7 +71,7 @@
 					</a>
 				</div>
 				<div class="item7">
-					<a href="swift.html">
+					<a [routerLink]="['/snowboards/board/swift']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Summit/17Swift.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Swift</span>
@@ -80,7 +80,7 @@
 					</a>
 				</div>
 				<div class="item8">
-					<a href="aura.html">
+					<a [routerLink]="['/snowboards/board/aura']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/SLsplit/17Aura.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Aura</span>
@@ -89,7 +89,7 @@
 					</a>
 				</div>
 				<div class="item9">
-					<a href="snowtrooper.html">
+					<a [routerLink]="['/snowboards/board/snowtrooper']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/snowtrooper/17Snowtrooper.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Snowtrooper</span>
@@ -98,7 +98,7 @@
 					</a>
 				</div>
 				<div class="item10">
-					<a href="ripsaw.html">
+					<a [routerLink]="['/snowboards/board/ripsaw']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/ripsaw/17Ripsaw.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Ripsaw</span>
@@ -107,7 +107,7 @@
 					</a>
 				</div>
 				<div class="item11">
-					<a href="chairman.html">
+					<a [routerLink]="['/snowboards/board/chairman']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/chairman/17Chairman.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Chairman</span>
@@ -116,7 +116,7 @@
 					</a>
 				</div>
 				<div class="item12">
-					<a href="infinity.html">
+					<a [routerLink]="['/snowboards/board/infinity']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Infinity/17Infinity.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Infinity</span>
@@ -125,7 +125,7 @@
 					</a>
 				</div>
 				<div class="item13">
-					<a href="onyx.html">
+					<a [routerLink]="['/snowboards/board/onyx']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/onyx/17Onyx.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Onyx</span>
@@ -134,7 +134,7 @@
 					</a>
 				</div>
 				<div class="item14">
-					<a href="proto-mini.html">
+					<a [routerLink]="['/snowboards/board/proto-mini']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/evomini/17ProtoMini.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Mini Proto</span>
@@ -143,7 +143,7 @@
 					</a>
 				</div>
 				<div class="item15">
-					<a href="bantam.html">
+					<a [routerLink]="['/snowboards/board/bantam']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/evomini/17Bantam.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Bantam</span>
@@ -152,7 +152,7 @@
 					</a>
 				</div>
 				<div class="item16">
-					<a href="starlet.html">
+					<a [routerLink]="['/snowboards/board/starlet']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Onyxmini/17Starlet.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Starlet</span>
@@ -161,7 +161,7 @@
 					</a>
 				</div>
 				<div class="item17">
-					<a href="shredder.html">
+					<a [routerLink]="['/snowboards/board/shredder']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/17Shredder.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Shredder</span>
@@ -170,7 +170,7 @@
 					</a>
 				</div>
 				<div class="item18">
-					<a href="twenty-five-split.html">
+					<a [routerLink]="['/snowboards/board/twenty-five-split']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Cobra/1725Split.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Twenty Five Split</span>
@@ -179,7 +179,7 @@
 					</a>
 				</div>
 				<div class="item19">
-					<a href="west-split.html">
+					<a [routerLink]="['/snowboards/board/west-split']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/heritage/17West.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">West Split</span>
@@ -188,7 +188,7 @@
 					</a>
 				</div>
 				<div class="item20">
-					<a href="prospector-split.html">
+					<a [routerLink]="['/snowboards/board/prospector-split']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Prospector/17Prospector.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Prospector Split</span>
@@ -197,7 +197,7 @@
 					</a>
 				</div>
 				<div class="item21">
-					<a href="aura-split.html">
+					<a [routerLink]="['/snowboards/board/aura-split']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Ravensplit/17AuraSplit.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Aura Split</span>
