Added youtube video to snowboard view, and added styling for mobile responsive to snowboard and home

--- a/src/app/snowboards/snowboards.component.html
+++ b/src/app/snowboards/snowboards.component.html
@@ -1,6 +1,19 @@
 <div id="content">
 
-	<div class="top-parallax" style="background-image:url('../../../assets/img/snowboards/1101SnowHero.jpg')"></div>
+	<div class="top-parallax" style="background-image:url('../../../assets/img/snowboards/1101SnowHero.jpg')">
+		<div class="outer">
+			<div class="inner">
+				<div *ngIf="playActive" class="play-icon">
+					><i class="fa fa-play" (click)="onClick()"></i>
+				</div>
+				<div *ngIf="clicked" class="cntVid">
+					<figure class="youtube youtube-youtube">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/S49mJQXR5dw" frameborder="0" allowfullscreen></iframe>
+					</figure>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div id="main">
 		<h1 class="title-has-line text-align-center">Snowboards</h1>
