--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -616,3 +616,13 @@ section .overlay {
 
 
 
+@media only screen and (max-width: 2000px) {
+.top-parallax {
+	height: 980px;
+	}
+}
+@media only screen and (max-width: 1466px) {
+	.top-parallax {
+		height: 775px;
+	}
+}
