--- a/src/app/snowboards/snowboards.component.scss
+++ b/src/app/snowboards/snowboards.component.scss
@@ -12,6 +12,96 @@
 	padding: 40px;
 }
 
+/* Video Hover Play Image */	
+.cntVid, figure.vimeo, figure.youtube {
+    margin:0;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 0;
+    height: 0;
+    overflow: hidden;
+}
+.cntVid iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+figure.youtube a img, figure.vimeo a img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    max-width:none;
+}
+figure.vimeo a:after, figure.youtube a:after {
+    content:"";
+    width:60px;
+    height:60px;
+    background:#fff;
+    z-index:9;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin:-30px 0 0 -30px;
+    border:3px solid #fff;
+    -webkit-box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.01);
+    -moz-box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.01);
+    box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.01);
+}
+figure.vimeo a:before, figure.youtube a:before {
+    content:"";
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-left: 8px solid #000;
+    z-index:10;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:0px;
+    margin-top:-4px;
+    display:block;
+}
+figure.vimeo a:hover img, figure.youtube a:hover img {
+    -webkit-transition: all 0.6s;
+    transition: all 0.6s;
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+}
+figure.vimeo a img, figure.youtube a img {
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+section.video-none { display:none; }
+section.video-vimeo { display:block; }
+section.video-youtube { display:block; }
+figure.vimeo-vimeo { display:block; }
+figure.vimeo-youtube { display:none; }
+figure.youtube-vimeo { display:none; }
+figure.youtube-youtube { display:block; }
+figure.youtube-none { display:none; }
+figure.vimeo-none { display:none; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 // Navigation Links
 #filters {
 	margin: 0;
@@ -679,23 +769,10 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 /*--------------------------------------------------
 	06. Content Styles
 ---------------------------------------------------*/				
-			
-
-
+		
 #content:after {
 	clear: both;
 	content: " ";
@@ -875,7 +952,6 @@ section .overlay {
 
 
 
-
 /*pagination*/
 ul.pagination {
 	margin: 0;
@@ -888,4 +964,13 @@ ul.pagination li {
 	margin: 0 2px;
 }
 
-/* @end */
+@media only screen and (max-width: 2000px) {
+.top-parallax {
+	height: 980px;
+	}
+}
+@media only screen and (max-width: 1466px) {
+	.top-parallax {
+		height: 775px;
+	}
+}
