--- a/src/app/longboards/longboards.component.scss
+++ b/src/app/longboards/longboards.component.scss
@@ -9,8 +9,124 @@
 }
 
 #main {
-    margin-top: 50px;
+    margin-top: 10px;
+	padding: 40px;
 }
+
+.play-icon {
+	text-align:center;
+	border:#fff 10px solid;
+	width:100px;
+	height:100px;
+	margin:0 auto;
+	border-radius:100px;
+	cursor:pointer;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+.play-icon:hover {
+	border:#e11f26 10px solid;
+}
+
+.play-icon i {
+	color: #fff;
+	font-size: 36px;
+	line-height: 100px;
+	margin-left: 7px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+.play-icon:hover i {
+	color: #e11f26;
+}
+
+
+
+
+/* Video Hover Play Image */	
+.cntVid, figure.vimeo, figure.youtube {
+    margin:0;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 0;
+    height: 0;
+    overflow: hidden;
+}
+.cntVid iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+figure.youtube a img, figure.vimeo a img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    max-width:none;
+}
+figure.vimeo a:after, figure.youtube a:after {
+    content:"";
+    width:60px;
+    height:60px;
+    background:#fff;
+    z-index:9;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin:-30px 0 0 -30px;
+    border:3px solid #fff;
+    -webkit-box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.01);
+    -moz-box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.01);
+    box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.01);
+}
+figure.vimeo a:before, figure.youtube a:before {
+    content:"";
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-left: 8px solid #000;
+    z-index:10;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:0px;
+    margin-top:-4px;
+    display:block;
+}
+figure.vimeo a:hover img, figure.youtube a:hover img {
+    -webkit-transition: all 0.6s;
+    transition: all 0.6s;
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+}
+figure.vimeo a img, figure.youtube a img {
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+section.video-none { display:none; }
+section.video-vimeo { display:block; }
+section.video-youtube { display:block; }
+figure.vimeo-vimeo { display:block; }
+figure.vimeo-youtube { display:none; }
+figure.youtube-vimeo { display:none; }
+figure.youtube-youtube { display:block; }
+figure.youtube-none { display:none; }
+figure.vimeo-none { display:none; }
+
 
 
 // Navigation Links
@@ -493,16 +609,6 @@
 	
 	
 
-
-
-
-
-
-
-
-
-
-
 // News Feed Parallax
 section {
 	margin-left: -50%;
@@ -544,4 +650,20 @@ ul.pagination li {
 	display: inline;
 	list-style: none;
 	margin: 0 2px;
+}
+
+
+@media only screen and (max-width: 2000px) {
+.top-parallax {
+	height: 980px;
+}
+#main {
+    margin-top: 55px;
+	padding: 40px;
+}
+}
+@media only screen and (max-width: 1466px) {
+	.top-parallax {
+		height: 775px;
+	}
 }
