--- a/src/app/snowboards/snowboards-board-proto-type-two/snowboards-board-proto-type-two.component.html
+++ b/src/app/snowboards/snowboards-board-proto-type-two/snowboards-board-proto-type-two.component.html
@@ -174,21 +174,30 @@
 
       <div class="one_third text-align-center">
         <div class="radial-counter">
-          <input class="knob" data-gal="40" value="0">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-40.png')"></canvas>
+            <input class="knob" data-gal="40" value="40" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
           <h5 class="radial-counter-name">Freestyle</h5>
         </div>
       </div>
 
       <div class="one_third text-align-center">
         <div class="radial-counter">
-          <input class="knob" data-gal="40" value="0">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-40.png')"></canvas>
+          <input class="knob" data-gal="40" value="40" readonly="readonly" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
           <h5 class="radial-counter-name">All Mountain</h5>
         </div>
       </div>
 
       <div class="one_third text-align-center last">
         <div class="radial-counter">
-          <input class="knob" data-gal="20" value="0">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-20.png')"></canvas>
+          <input class="knob" data-gal="20" value="20" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
           <h5 class="radial-counter-name">Freeride</h5>
         </div>
       </div>
@@ -199,7 +208,9 @@
         <h5 class="text-align-center title-has-line">Flex</h5>
         <ul class="progress-bar">
           <li>
-            <div class="bar-wrap"><span data-width="37"><strong><i>37</i></strong></span></div>
+            <div class="bar-wrap">
+              <span data-width="37" style="width: 37%"><strong><i>37</i></strong></span>
+            </div>
           </li>
         </ul>
 
@@ -217,7 +228,9 @@
         <h5 class="text-align-center title-has-line">Damp</h5>
         <ul class="progress-bar">
           <li>
-            <div class="bar-wrap"><span data-width="37"><strong><i>37</i></strong></span></div>
+            <div class="bar-wrap">
+              <span data-width="37" style="width: 37%"><strong><i>37</i></strong></span>
+              </div>
           </li>
         </ul>
         <table class="slidertable">
@@ -258,7 +271,36 @@
 
 
 
-<script>
+<!--<script>
+function Shortcodes() {
+
+  //Progress bar animations	
+		$('.progress-bar li').each(function(i){		
+			$(this).appear(function(){			
+				var percent = $(this).find('span').attr('data-width');
+				var $endNum = parseInt($(this).find('span strong i').text());
+				var $that = $(this);			
+				$(this).find('span').animate({
+					'width' : percent + '%'
+				},1600, function(){
+				});			
+				$(this).find('span strong').animate({
+					'opacity' : 1
+				},1400);			
+				$(this).find('span strong i').countTo({
+					from: 0,
+					to: $endNum,
+					speed: 1200,
+					refreshInterval: 30,
+					onComplete: function(){}
+				});	 
+				if(percent == '100'){
+					$that.find('span strong').addClass('full');
+				}	
+			});
+		});	
+
+    // Radial Counters
   if( jQuery('.radial-counter').length > 0 ){		
 			$(".knob").knob({
 				width: 190,
@@ -284,4 +326,5 @@
 			   })			
 			});	
 		}
-</script>
+}
+</script>-->
