Completed snowboards/twenty-five view and re-sized all dial images to proper dimensions

--- a/src/app/snowboards/snowboards-board-twenty-five/snowboards-board-twenty-five.component.html
+++ b/src/app/snowboards/snowboards-board-twenty-five/snowboards-board-twenty-five.component.html
@@ -1,3 +1,262 @@
-<p>
-  snowboards-board-twenty-five works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/Cobra/17_JedCreative_25.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Twenty Five</h3>
+        <p class="monospace title-has-line">Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          We’ve created a special, limited edition classic for our 25th Anniversary that embodies Never Summer’s reputation of quality, performance and durability. The Twenty Five is the perfect blend for the hard charging freerider, reminiscent of the
+          classic Heritage in flex and damping. Featuring our new Hextech Topsheet, RDS 1+ Damping System, and Ripsaw Rocker Camber Profile, the Twenty Five is designed as a directional freeride version of the Proto Type Two. The Twenty Five has optimum
+          powder performance with a mid firm flex for carving precision. Here’s to another 25 years of the best boards built!
+        </p>
+        <p>
+          <b>TWENTY FIVE  X: </b> A wide version of the original
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+								<li><a href="http://neversummer-snow.shptron.com/p/twenty-five?pp=16" target="_blank">Buy Now Online</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-ripsaw.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/Cobra/1725.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>151</td>
+                    <td>24.8</td>
+                    <td>113</td>
+                    <td>Vario 755</td>
+                    <td>29.1/28.5</td>
+                  </tr>
+                  <tr>
+                    <td>155</td>
+                    <td>25.0</td>
+                    <td>117</td>
+                    <td>Vario 778</td>
+                    <td>29.5/28.8</td>
+                  </tr>
+                  <tr>
+                    <td>158</td>
+                    <td>25.2</td>
+                    <td>119</td>
+                    <td>Vario 796</td>
+                    <td>29.8/29.1</td>
+                  </tr>
+                  <tr>
+                    <td>160</td>
+                    <td>25.4</td>
+                    <td>121</td>
+                    <td>Vario 810</td>
+                    <td>30.1/29.4</td>
+                  </tr>
+                  <tr>
+                    <td>162</td>
+                    <td>25.6</td>
+                    <td>123</td>
+                    <td>Vario 820</td>
+                    <td>30.3/29.7</td>
+                  </tr>
+                  <tr>
+                    <td>165</td>
+                    <td>25.8</td>
+                    <td>125</td>
+                    <td>Vario 836</td>
+                    <td>30.6/30.0</td>
+                  </tr>
+                  <tr>
+                    <td>159X</td>
+                    <td>26.2</td>
+                    <td>119</td>
+                    <td>Vario 796</td>
+                    <td>30.8/30.1</td>
+                  </tr>
+                  <tr>
+                    <td>163X </td>
+                    <td>26.5</td>
+                    <td>123</td>
+                    <td>Vario 820</td>
+                    <td>31.3/30.1</td>
+                  </tr>
+                  <tr>
+                    <td>166X</td>
+                    <td>26.8</td>
+                    <td>125</td>
+                    <td>Vario 836</td>
+                    <td>31.6/31.0</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Hextech Topsheet</li>
+                <li>Carbon Max Laminate Technology</li>
+                <li>Ripsaw Rocker Camber Profile</li>
+                <li>Extended Transition Area</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>STS Pre-tensioned Fiberglass</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>NS SuperLight Wood Core</li>
+                <li>RDS 1+ Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Sidewall</li>
+                <li>Durasurf XT Sintered 5501 Base</li>
+                <li>P-tex Tip and Tail Protection</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Cobra/NS_TwentyFive17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Cobra/NS_TwentyFive17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/Cobra/NS_TwentyFive17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-5.png')"></canvas>
+            <input class="knob" data-gal="5" value="5" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-10.png')"></canvas>
+            <input class="knob" data-gal="10" value="10" readonly="readonly" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-85.png')"></canvas>
+          <input class="knob" data-gal="85" value="85" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="62" style="width: 62%"><strong><i>62</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="87" style="width: 87%"><strong><i>87</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/za2CdVopoI0" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+
+
+
+    </div>
+  </div>
+</div>
