Completed snowboards/warlock view

--- a/src/app/snowboards/snowboards-board-warlock/snowboards-board-warlock.component.html
+++ b/src/app/snowboards/snowboards-board-warlock/snowboards-board-warlock.component.html
@@ -1,3 +1,262 @@
-<p>
-  snowboards-board-warlock works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/Evo/17_JedCreative_Warlock.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Warlock</h3>
+        <p class="monospace title-has-line">Freestyle Twin</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          The true twin Warlock features a new shape, Original Rocker Camber Profile, new flex pattern, and incredible park performance. The new Warlock production technique has this board looking wicked. The best characteristics of the Evo and Proto HD
+          were stolen, and additional carbon was added outside the bindings to provide insane lift off and perfect landings. Soft flex between the feet and torsionally rigid nose and tail make for pinpoint turning and amazing pressability. Add to that
+          the Warlock’s playful, forgiving feel and the result is freestyle wizardry.
+        </p>
+        <p>
+          <b>WARLOCK X:</b> A wide version of the original
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/warlock?pp=16" target="_blank">Buy Now Online</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-original.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/Evo/17Warlock.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>148</td>
+                    <td>24.3</td>
+                    <td>115</td>
+                    <td>Vario 705</td>
+                    <td>28.7</td>
+                  </tr>
+                  <tr>
+                    <td>150</td>
+                    <td>24.5</td>
+                    <td>117</td>
+                    <td>Vario 712</td>
+                    <td>29.0</td>
+                  </tr>
+                  <tr>
+                    <td>152</td>
+                    <td>24.7</td>
+                    <td>118</td>
+                    <td>Vario 723</td>
+                    <td>29.2</td>
+                  </tr>
+                  <tr>
+                    <td>154</td>
+                    <td>25.0</td>
+                    <td>120</td>
+                    <td>Vario 735</td>
+                    <td>29.5</td>
+                  </tr>
+                  <tr>
+                    <td>157</td>
+                    <td>25.2</td>
+                    <td>122</td>
+                    <td>Vario 749</td>
+                    <td>29.9</td>
+                  </tr>
+                  <tr>
+                    <td>150X</td>
+                    <td>25.6</td>
+                    <td>117</td>
+                    <td>Vario 713</td>
+                    <td>30.0</td>
+                  </tr>
+                  <tr>
+                    <td>153X</td>
+                    <td>25.7</td>
+                    <td>118</td>
+                    <td>Vario 724</td>
+                    <td>30.2</td>
+                  </tr>
+                  <tr>
+                    <td>156X</td>
+                    <td>26.0</td>
+                    <td>120</td>
+                    <td>Vario 735 </td>
+                    <td>30.6</td>
+                  </tr>
+                  <tr>
+                    <td>159X</td>
+                    <td>26.2</td>
+                    <td>123</td>
+                    <td>Vario 749</td>
+                    <td>30.9</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Matte Topsheet </li>
+                <li>Carbon VXR Laminate Technology</li>
+                <li>Original Rocker Camber Profile</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>STS Pretensioned Fiberglass</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>Press Flex Core</li>
+                <li>FDS Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Sidewall</li>
+                <li>Durasurf XT Sintered 4501 Base</li>
+                <li>Full Wrap Metal Edge</li>
+                <li>P-tex Tip/Tail Protection</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Evo/NS_Warlock17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Evo/NS_Warlock17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/Evo/NS_Warlock17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-60.png')"></canvas>
+            <input class="knob" data-gal="60" value="60" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-40.png')"></canvas>
+            <input class="knob" data-gal="40" value="40" readonly="readonly" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+          <input class="knob" data-gal="0" value="0" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="12" style="width: 12%"><strong><i>12</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="12" style="width: 12%"><strong><i>12</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/dMAek0GHeY8" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+
+
+
+    </div>
+  </div>
+</div>
