Completed snowboards/proto-type-two-womens view

--- a/src/app/snowboards/snowboards-board-twenty-five/snowboards-board-twenty-five.component.html
+++ b/src/app/snowboards/snowboards-board-twenty-five/snowboards-board-twenty-five.component.html
@@ -183,7 +183,7 @@
         <div class="radial-counter">
           <div style="display: inline; width: 190px; height: 190px;">
             <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-10.png')"></canvas>
-            <input class="knob" data-gal="10" value="10" readonly="readonly" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+            <input class="knob" data-gal="10" value="10" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
           </div>
             <h5 class="radial-counter-name">All Mountain</h5>
           </div>
@@ -253,9 +253,6 @@
       </section>
 
       <hr>
-
-
-
 
     </div>
   </div>
