Completed snowboards/funslinger view

--- a/src/app/snowboards/snowboards-board-proto-type-two-womens/snowboards-board-proto-type-two-womens.component.html
+++ b/src/app/snowboards/snowboards-board-proto-type-two-womens/snowboards-board-proto-type-two-womens.component.html
@@ -43,13 +43,13 @@
               <table>
                 <thead>
                   <tr>
-                    <td>139</td>
-                    <td>23.2</td>
-                    <td>106</td>
-                    <td>Vario 659/626 </td>
-                    <td>27.5</td>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut** (Toe/Heel) </td>
+                    <td>Tip / Tail</td>
                   </tr>
-                </thead>
+              </thead>
                 <tbody>
                   <tr>
                     <td>142</td>
